[gd_scene load_steps=2 format=3 uid="uid://dyvgpxd0rqg44"]

[ext_resource type="Script" path="res://Scenes/MainMenu/main_menu.gd" id="1_q37t8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q37t8")

[node name="VerticalBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -110.0
offset_right = 115.0
offset_bottom = -9.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VerticalBoxContainer"]
layout_mode = 2
text = "Start"

[node name="CreditsButton" type="Button" parent="VerticalBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="VerticalBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VerticalBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VerticalBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VerticalBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
